Fix icon alignment in menu

--- a/src/molecules/Menu/MenuCart.pcss
+++ b/src/molecules/Menu/MenuCart.pcss
@@ -7,6 +7,7 @@
   &__button {
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: transparent;
     border: 0;
     padding: 0;
