--- a/src/molecules/Menu/MenuContent.pcss
+++ b/src/molecules/Menu/MenuContent.pcss
@@ -220,7 +220,7 @@
     font-size: 0.75rem;
     border-radius: 0;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     letter-spacing: 0;
     box-sizing: content-box;
 
@@ -287,6 +287,7 @@
       }
       &__desktop {
         display: flex;
+        margin-left: 1rem;
       }
     }
 
