--- a/src/molecules/Menu/MenuSearch.pcss
+++ b/src/molecules/Menu/MenuSearch.pcss
@@ -2,15 +2,11 @@
   position: relative;
   display: flex;
   height: 100%;
-  align-items: baseline;
+  align-items: center;
   cursor: pointer;
   width: var(--menu-button-width-small);
   flex-direction: row;
   justify-content: space-between;
-
-  @media all and (min-width: rem(1120)) {
-    align-items: center;
-  }
 
   &:focus,
   &:hover {
